les streams et tp sur le jeu du pendu